# LMS

./: .gitignore  00_SETUP_ENTORNO.md  00_TEMARIO_COMPLETO.md  CLAUDE.md  ESTADO_DESARROLLO.md  PROGRESO_FINAL.md  README.md  VERIFICACION_FINAL.md  VISUALIZADOR_README.md  cleanup.sh  fix-test-users.js  index.html
plataforma/backend-fastapi/: .env.example  .gitignore  Dockerfile  bash.exe.stackdump  pyproject.toml
plataforma/backend-fastapi/alembic/: env.py
plataforma/backend-fastapi/alembic/versions/: 0001_initial_schema.py  0002_stamp_baseline.py  0003_add_course_score.py  0005_extend_badges.py  0006_userbadge_unique_constraint.py  0007_add_missing_notificationtype_values.py  83e3e3cc5422_add_xp_transactions.py  873af25b4e72_add_xp_indexes.py  92d0f4cc0cc7_add_ldap_configuration_table.py  a1b2c3d4e5f6_sync_models_with_db.py  d874eb74a2b6_add_time_spent_if_not_exists.py  ede688d04d8a_add_video_url_to_lesson_and_attachments_.py  f1a2b3c4d5e6_add_lab_type_and_deliverable_fields.py
plataforma/backend-fastapi/app/: config.py  database.py  main.py  permissions.py  redis.py
plataforma/backend-fastapi/app/middleware/: auth.py  correlation.py  error_handler.py  rate_limit.py
plataforma/backend-fastapi/app/models/: __init__.py  admin_config.py  assessment.py  common.py  content.py  course.py  gamification.py  progress.py  user.py
plataforma/backend-fastapi/app/routers/: admin.py  analytics.py  attachments.py  auth.py  badges.py  certificates.py  course_management.py  courses.py  export.py  incidents.py  instructor.py  labs.py  lessons.py  modules.py  notifications.py  progress.py  projects.py  quizzes.py  training_profiles.py  uploads.py  users.py
plataforma/backend-fastapi/app/schemas/: admin.py  attachment.py  auth.py  common.py  course.py  gamification.py  incident.py  lab.py  quiz.py  user.py
plataforma/backend-fastapi/app/scripts/: import_course.py  seed_base.py
plataforma/backend-fastapi/app/services/: admin_service.py  analytics_service.py  attachment_service.py  auth_service.py  badge_service.py  certificate_service.py  course_service.py  email_service.py  executor_client.py  export_service.py  incident_service.py  instructor_service.py  lab_service.py  ldap_config_service.py  ldap_service.py  lesson_service.py  module_service.py  notification_service.py  oauth_service.py  progress_service.py  project_service.py  quiz_service.py  scoring.py  token_service.py  training_profile_service.py  user_service.py
plataforma/backend-fastapi/app/utils/: course_scoring.py  enrollment_check.py  logger.py  query_utils.py  security.py  validators.py
plataforma/backend-fastapi/tests/: conftest.py  test_health.py
plataforma/backend-fastapi/tests/test_admin/: test_admin_ldap_endpoints.py  test_services.py
plataforma/backend-fastapi/tests/test_attachments/: test_attachment_upload.py  test_attachments_enrollment.py
plataforma/backend-fastapi/tests/test_auth/: test_auth_router.py  test_auth_service.py  test_token_service.py
plataforma/backend-fastapi/tests/test_courses/: test_course_management_update.py  (+5 more)
(+891 files in other folders)
